<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/layout_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/tv_success"
            style="@style/font_b1_semibold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/success_reset_password" />

        <View
            style="@style/custom_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="8dp"/>

        <TextView
            android:id="@+id/tv_message"
            style="@style/font_b1_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/reset_message" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_yes"
                style="@style/btn_yes"
                android:textAppearance="@style/font_b1_semibold"
                android:textColor="@color/white"
                app:cornerRadius="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:elevation="10dp"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_no"
                style="@style/btn_no"
                android:textAppearance="@style/font_b1_semibold"
                android:textColor="@color/white"
                app:cornerRadius="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:elevation="10dp"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>