<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="8dp"
    android:elevation="20dp"
    tools:context=".features.auth.lupa_password.LupaPasswordFragment">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_register"
                style="@style/font_h5_semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/forget_password_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <ImageButton
                    android:id="@+id/btn_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_close"
                    android:contentDescription="@string/botton_close" />
            </LinearLayout>

        </LinearLayout>

        <View
            style="@style/custom_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="8dp" />

        <TextView
            android:textAppearance="@style/font_b1_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:text="@string/string_information_forget_password" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_input_hint_email"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:errorEnabled="true"
            app:startIconContentDescription="email"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_email"
                style="@style/font_b1_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:backgroundTint="@color/white"
                android:textColor="@color/neutral_900"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_reset"
            style="@style/btn_ok"
            android:textAppearance="@style/font_h5_semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="38dp"
            android:elevation="8dp"
            android:maxWidth="320dp"
            android:minWidth="260dp"
            android:padding="16dp"
            app:cornerRadius="8dp"
            android:textAllCaps="false"
            android:stateListAnimator="@null"
            android:text="@string/kirim"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>

</androidx.cardview.widget.CardView>