<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_quiz"
    style="@style/layout_card_list_quiz"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="5dp"
    android:elevation="12dp"
    app:cardElevation="12dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="103dp"
            android:layout_height="81dp"
            android:layout_marginEnd="4dp">

            <ImageView
                android:id="@+id/iv_thumbnail_kuis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/bg_card_view"
                android:scaleType="centerCrop"
                android:contentDescription="@string/string_image_wayang"/>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_quiz_title"
                style="@style/font_b1_semibold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/string_item_quiz_header" />
            <View
                android:layout_width="match_parent"
                android:layout_height="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/layout_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_gravity="start|center"
                    android:visibility="invisible">
                    <TextView
                        style="@style/font_b3_semibold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/score_string" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/container_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="12dp">

                        <TextView
                            android:id="@+id/tv_score"
                            style="@style/font_b3_semibold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:layout_marginVertical="2dp"
                            android:textColor="@color/white"
                            android:text="@string/_score" />

                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_start_quiz"
                    style="@style/custom_botton_quiz"
                    android:textAppearance="@style/font_b3_semibold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="78dp"
                    android:minHeight="26dp"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    app:cornerRadius="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/start_quiz"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:layout_gravity="end|bottom"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>