<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/onboardingRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/layout_splash"
    app:layoutDescription="@xml/onboarding_main_scene">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/slider"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/page_indicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8016416" />

    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
        android:id="@+id/page_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dotsColor="@color/warning_700"
        app:dotsCornerRadius="8dp"
        app:dotsSize="@dimen/margin_8"
        app:dotsSpacing="@dimen/margin_8"
        app:dotsStrokeColor="@color/warning_50"
        app:dotsStrokeWidth="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton.OnBoardTextButton"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:textAppearance="@style/font_h6_regular"
        android:text="@string/selanjutnya"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/startBtn"
        app:layout_constraintTop_toBottomOf="@+id/page_indicator" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_16"
        android:backgroundTint="@color/orange_700"
        app:cornerRadius="24dp"
        android:paddingStart="@dimen/padding_30"
        android:paddingEnd="@dimen/padding_30"
        android:paddingTop="@dimen/margin_16"
        android:paddingBottom="@dimen/margin_16"
        android:text="@string/ayo_mulai"
        android:textColor="@color/white"
        android:drawableEnd="@drawable/ic_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_indicator"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skipBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton.OnBoardTextButton"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="@dimen/margin_16"
        android:text="@string/lewatkan"
        android:textAppearance="@style/font_h6_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_indicator" />
</androidx.constraintlayout.motion.widget.MotionLayout>